# AlphaContours

./: LICENSE  README.md
AlphaContours/: CMakeLists.txt  MatlabUtils.cpp  MatlabUtils.h  computeAlpha.cpp  computeAlpha.h  main.cpp  main.h  typedefs.cpp  typedefs.h
SGP21_discreteOptimization-main/: compute_fmap.asv  compute_fmap.m  compute_fmap_orig.m  eg3_faust.m
algoB/: algoB.py  myLoadSVG.m  readme.txt  resample_polygon.m  strips2mesh.m  writeOBJ.m
algoB/inputs/: AYVvm_sm.png_SA_cluster.scap  Penguin_new_SA_cluster.scap  Witch_08_SA_cluster.scap  bear_clusterstrips_contourEdges.mat  bear_contours.mat
algoB/strokeaggregator/: Evaluation Software License Agreement.docx  README.txt  run_aggregator.py  stroke_aggregator.py
algoB/strokestrip/: Koala_SA_cluster.scap
algoB/trash/: myWriteOBJ.m  triangulate.m
code/: .gitignore  computeMatricesForARegion.m  convertScapToMatlab.py  dFundamentalSolution.m  drawingLaplacian.m  fundamentalSolution.m  fundamentalSolutionIntegral.m  minDirichlet.m  nsharp.py  quadrature.m  quadrature_directional_derivative_fast.m  quadrature_fast.m  scapio.py  test_BEM_laplacian.m  test_arr.m  thinStuff2.m
paper/: .gitignore  fig1.m  fig12.m  fig13.m  fig14.m  fig15.m  fig16.m  fig17.m  fig18.m  fig19.m  fig2.m  fig20.m  fig21.m  fig22.m  fig3.m  fig4.m  meshAndFmap.m  optimalFmap.m
paper/Utils/: MeshInfo.m  MeshInfoCotanLaplacian.m  MeshInfoPointCloudLaplacian.m  MeshInfoSteklovOperator.asv  MeshInfoSteklovOperator.m  connectivity.m  cotLaplacian.m  dijkstra_fps.m  euclidean_fps.m  landmarks.m  per_edge_area.m  (+1 more)
(+654 files in other folders)
